--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 <body>
     <div>Hola mi nombre es Jonathan</div>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita velit id, ipsa voluptate recusandae temporibus, minus aperiam atque veritatis amet et non reprehenderit quo tenetur incidunt unde repellat maxime! Molestias.</p>
+
+    <Button></Button>
 </body>
 </html>
