--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div>Hola mi nombre es Jonathan</div>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita velit id, ipsa voluptate recusandae temporibus, minus aperiam atque veritatis amet et non reprehenderit quo tenetur incidunt unde repellat maxime! Molestias.</p>
 
-    <Button></Button>
+    <Button>Push me</Button>
 </body>
 </html>
